     and Hooks. All help topics are now dumped into text format in the
     doc/en/user-reference directory for those who like browsing that
     information in their editor. (Ian Clatworthy)

  INTERNALS:

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)

  API BREAKS:

  TESTING:

   * New helper function ``bzrlib.tests.condition_id_re`` which helps
     filter tests based on a regular expression search on the tests id.
     (Robert Collins)
    
   * New helper function ``bzrlib.tests.condition_isinstance`` which helps
     filter tests based on class. (Robert Collins)
    
   * New helper function ``bzrlib.tests.exclude_suite_by_condition`` which
     generalises the ``exclude_suite_by_re`` function. (Robert Collins)

   * New helper function ``bzrlib.tests.filter_suite_by_condition`` which
     generalises the ``filter_suite_by_re`` function. (Robert Collins)

   * New helper method ``bzrlib.tests.exclude_tests_by_re`` which gives a new
     TestSuite that does not contain tests from the input that matched a
     regular expression. (Robert Collins)

   * New helper method ``bzrlib.tests.randomise_suite`` which returns a
     randomised copy of the input suite. (Robert Collins)

   * New helper method ``bzrlib.tests.split_suite_by_re`` which splits a test
     suite into two according to a regular expression. (Robert Collins)

   * The ``exclude_pattern`` and ``random_order`` parameters to the function
     ``bzrlib.tests.filter_suite_by_re`` have been deprecated. (Robert Collins)

   * The method ``bzrlib.tests.sort_suite_by_re`` has been deprecated. It is 
     replaced by the new helper methods added in this release. (Robert Collins)


bzr 1.0 2007-12-14
==================

  DOCUMENTATION:

   * More improvements and fixes to the User Guide.  (Ian Clatworthy)

   * Add information on cherrypicking/rebasing to the User Guide.
     (Ian Clatworthy)
